# sensor_fusion_study

calib_data/cam_lidar_calib/: cam_lidar_calib_result.txt
calib_data/stereo_cam_calib/: stereo_cam_calib.yaml
calib_interfaces/: CMakeLists.txt  package.xml
calib_main/: CMakeLists.txt  package.xml
calib_main/scripts/: intensity.py  pca_plane.py
calib_main/src/: cam_lidar_calib.cpp  intensity.cpp
calib_ros2/: CMakeLists.txt  package.xml
calib_ros2/src/: multi_lidar_calib.cpp  one_cam_calib.cpp  pcd_publisher.cpp  stereo_cam_calib.cpp
calib_utils/: CMakeLists.txt
calib_utils/include/: intensity_lidar_corner_detection.hpp
calib_utils/src/: intensity_lidar_corner_detection.cpp
sensor_fusion_study/: CMakeLists.txt  calibration_result.yaml  cam_lidar_calibone_cam_calib_result.yaml  package.xml  stereo_calib.yaml
sensor_fusion_study/calibration/cam_lidar_calib/: lidar_camera_extrinsic.yaml  lidar_plane_points.pcd  reprojection_error.txt
sensor_fusion_study/calibration/cam_lidar_calib/pointclouds/: pcd_0.pcd  pcd_10.pcd  pcd_7.pcd  pcd_9.pcd
sensor_fusion_study/cam_lidar_calib/: cam_lidar_calib_result.txt  lidar_camera_extrinsic.yaml  reprojection_error.txt
sensor_fusion_study/cam_lidar_calib/pointclouds/: pcd_1.pcd  pcd_11.pcd  pcd_12.pcd  pcd_2.pcd  pcd_3.pcd  pcd_4.pcd  pcd_5.pcd  pcd_6.pcd  pcd_8.pcd  pointcloud_0.pcd  pointcloud_05.pcd  pointcloud_1.pcd  pointcloud_2.pcd  pointcloud_3.pcd  pointcloud_4.pcd  pointcloud_5.pcd
sensor_fusion_study/capture/: pointcloud_00.pcd  pointcloud_01.pcd  pointcloud_02.pcd  pointcloud_03.pcd  pointcloud_04.pcd
sensor_fusion_study/one_cam_calib/: one_cam_calib_result.yaml
sensor_fusion_study/scripts/: intensity.py
sensor_fusion_study/src/: cam_lidar_cali.cpp  cam_lidar_calib.cpp  cam_lidar_calib_2.cpp  cv_callibration.cpp  cv_cam_lidar_cali.cpp  cv_stereo.cpp  intensity.cpp  one_cam_calib.cpp  pcd_publisher.cpp  stereo_cam_calib.cpp
sensor_fusion_study/stereo_cam_calib/: stereo_cam_calib.yaml
sensor_fusion_study_interfaces/: CMakeLists.txt  package.xml
sensor_fusion_study_interfaces/srv/: Intensity.srv
sensor_fusion_study_utils/: CMakeLists.txt
